--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         .hidden-text { color: black; } /* Ukryty tekst */
         .entry { display: none; } /* Ukrywamy wpisy, będą pojawiać się stopniowo */
     </style>
+     <p class="hidden-text">Jeśli widzisz to, znalazłeś pierwszy znak. 32.768.56.11</p>
 </head>
 <body>
     <h1>Eksperyment Æmon¥</h1>
